# L-BFGS-cutoff-sd

./: .gitignore  CMakeLists.txt  L-BFGS  L-BFGS.cpp  README.md  compile_commands.json  control.inp  jacob.m  output.txt  sphere.txt
include/cppoptlib/: isolver.h  lbfgssolver.h  problem.h
include/cppoptlib/linesearch/: armijo.h  wolfeheuristic.h
